--- a/inst/www/css/crukTheme.css
+++ b/inst/www/css/crukTheme.css
@@ -106,7 +106,7 @@ body, p {
   }
 
   body, p {
-    font-size: 18px;
+    font-size: 1rem;
   }
 
   .subheading {
