--- a/inst/www/css/lastReview.css
+++ b/inst/www/css/lastReview.css
@@ -41,5 +41,4 @@
   font-family: Poppins, sans-serif;
   padding: 8px 12px;
   text-align: right;
-  white-space: nowrap;
 }
